force-app/main/default/objects/Receipt_Log_Setting__mdt/Receipt_Log_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Receipt Log Setting</label>
    <pluralLabel>Receipt Log Settings</pluralLabel>
</CustomObject>