force-app/main/default/objects/Receipt_Log_Setting__mdt/fields/Bank_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Location__c</fullName>
    <label>Bank Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA Bank</fullName>
            </value>
            <value>
                <fullName>Out of state bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>