force-app/main/default/objects/Receipt_Log_Setting__mdt/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Payment Type picklist from Receipt Log</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
                <default>true</default>
                <label>Check</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Cashier&#39;s Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>State Warrant</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>